# wasm_bind_gen_block_on

./: .gitignore  Cargo.toml  build.js
src/: lib.rs
vite-project/: main.js  package-lock.json  package.json
vite-project/public/: wasm_bind_gen_block_on_bg.wasm
