[package]
name = "wasm_bind_gen_block_on"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
futures = "0.3.28"
js-sys = "0.3.64"
log = "0.4.20"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.64"

getrandom = { version = "0.2", features = ["js"] }
chrono = { version = "0.4", features = ["wasmbind"] }
time = { version = "0.3", features = ["wasm-bindgen"] }
wasm-bindgen-test = "0.3.37"
